<resources>
    <string name="app_name">OTP Forward Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="developer">Soumyadip</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_policy">Edit the Policy</string>
    <string name="home">Home</string>
    <string name="edit_contacts">Edit Contacts</string>
    <string name="setup_mail">Setup Mail</string>
    <string name="contact_name_placeholder">Soumyadip Sharma</string>
    <string name="email_place_holder">sharmasoumyadip@gmail.com</string>
    <string name="policy_title_label">Policy Title</string>
    <string name="identifier_label">Enter policy name</string>
    <string name="activate_policy_label">Activate the policy</string>
    <string name="select_contacts_label">Select Contacts</string>
    <string name="filter_label">Configure Filters</string>
</resources>